# Student-Placement-Management-System

./: .gitignore  CMakeLists.txt  College.cpp  College.h  Company.cpp  Company.h  Date.cpp  Date.h  Eligibility.cpp  Eligibility.h  Offer.cpp  Offer.h  Skill.cpp  Skill.h  Student.cpp  Student.h  assemblycode  campusDatabase.db  create-dynamic-library.sh  create-static-library.sh  main.cpp
storage/: campusDatabase.db  db.sqlite3
